class Database:
  def __init__(self):
    pass